# Yggdrasil

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.json  module_registry.json  pyproject.toml  requirements.txt  ygg-mule.py  ygg_trunk.py  yggdrasil.py
.github/workflows/: lint.yml  security.yml  tests.yml
docs/diagrams/: ygg_architecture.mmd  ygg_classDiagram.mmd  ygg_core_flowchart.mmd  ygg_core_sequence.mmd
lib/: couchdb_feed.py  project.py  sample.py  technology.py
lib/base/: abstract_project.py  abstract_sample.py  sample_base.py
lib/branches/_10x/: 10x.py  10x_config.json  atac.py  gex.py  multiome.py  vdj.py
lib/branches/_10x/utils/: _10x_utils.py
lib/branches/smartseq3/: smartseq3.py  ss3_config.json
lib/branches/smartseq3/utils/: ss3_utils.py  yaml_utils.py
lib/core_utils/: common.py  config_loader.py  couch_utils.py  destiny_interface.py  event_types.py  logging_utils.py  module_resolver.py  ngi_report_generator.py  realm_template.py  singleton_decorator.py  sjob_manager.py  ygg_mode.py  ygg_session.py  yggdrasil_core.py
lib/couchdb/: couchdb_connection.py  document.py  manager.py  project_db_manager.py  yggdrasil_db_manager.py  yggdrasil_document.py
lib/handlers/: base_handler.py  bp_analysis_handler.py
lib/mocks/: __init__.py  mock_sjob_manager.py
lib/module_utils/: hpc_submission_policy.py  ngi_report_generator.py  report_transfer.py  sjob_manager.py  slurm_utils.py
lib/realms/delivery/: deliver.py
lib/realms/smartseq3/: smartseq3.py  ss3_project.py  ss3_sample.py
lib/realms/smartseq3/report/: report_generator.py  report_settings.json
lib/realms/smartseq3/report/utils/: bivariate_plate_map.py  report_utils.py  ss3_data_collector.py  ss3_figure_plotter.py
lib/realms/smartseq3/utils/: sample_file_handler.py  ss3_utils.py  yaml_utils.py  zumis_output_handler.py
lib/realms/tenx/: lab_sample.py  run_sample.py  sample.py  sample_old.py  tenx.py  tenx_project.py
lib/realms/tenx/utils/: sample_file_handler.py  tenx_utils.py
lib/utils/: branch_template.py  common.py  config_loader.py  config_utils.py  couch_utils.py  destiny_interface.py  logging_utils.py  ngi_report_generator.py  realm_template.py  singleton_decorator.py  sjob_manager.py  slurm_utils.py
lib/watchers/: abstract_watcher.py  couchdb_watcher.py  seq_data_watcher.py
requirements/: lock.txt
tests/: test_abstract_watcher.py  test_base_handler.py  test_bp_analysis_handler.py  test_cli.py  test_common.py  test_config_loader.py  test_couch_utils.py  test_couchdb_feed.py  test_couchdb_watcher.py  test_db_connection_manager.py  test_event_types.py  test_hpc_submission_policy.py  test_init.py  test_logging_utils.py  test_main.py  test_manager.py  test_module_resolver.py  test_ngi_report_generator.py  test_project_db_manager.py  test_report_transfer.py  test_seq_data_watcher.py  test_singleton_decorator.py  test_sjob_manager.py  test_slurm_utils.py  test_ygg_session.py  test_ygg_trunk.py  test_yggdrasil_core.py  test_yggdrasil_db_manager.py  test_yggdrasil_document.py  test_yggdrasil_event.py
tests/mocks/: mock_sjob_manager.py
tests/utils/: mock_sjob_manager.py
yggdrasil/: __init__.py  cli.py  logo_utils.py
yggdrasil/assets/: ascii-logo.txt
