[project]
name = "yggdrasil"
version = "0.0.0.dev0"
authors = [
    { name = "Anastasios Glaros", email = "anastasios.glaros@scilifelab.se" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "appdirs==1.4.4",
    "loompy==3.0.7",
    "networkx==3.5",
    "pandas==2.3.1",
    "panzi_json_logic==1.0.1",
    "Pillow==11.3.0",
    "reportlab==4.0.9",
    "rich==14.0.0",
    "watchdog==6.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pip-tools",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP"
]
ignore = [
    "E402",
    "E501",
    "E722",
    "E741"
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["yggdrasil"]
